successfully created and dropped tables for testing

--- a/model_notebooks/Postgres.ipynb
+++ b/model_notebooks/Postgres.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "               'POSTGRES_PORT' : '', # change to your port\n",
     "               'POSTGRES_USERNAME' : 'postgres', # change to your username\n",
     "               'POSTGRES_PASSWORD' : 'mypassword1!', # change to your password\n",
-    "               'POSTGRES_DBNAME' : 'test-1'} # change to your db name\n",
+    "               'POSTGRES_DBNAME' : 'postgres'} # change to your db name\n",
     "\n",
     "\n",
     "# create connection and cursor    \n",
@@ -35,9 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"\"\"SELECT * FROM pg_catalog.pg_tables\n",
     "            WHERE schemaname != 'pg_catalog'\n",
@@ -56,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"CREATE TABLE table_1\n",
     "                (column_1 int,\n",
@@ -74,9 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('public', 'table_1', 'postgres', None, False, False, False, False)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"\"\"SELECT * FROM pg_catalog.pg_tables\n",
     "            WHERE schemaname != 'pg_catalog'\n",
@@ -95,9 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tables created successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "table_list = ['table_2', 'table_3', 'table_4', 'table_5']\n",
     "for table_name in table_list:\n",
@@ -117,9 +155,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('public', 'table_1', 'postgres', None, False, False, False, False),\n",
+       " ('public', 'table_2', 'postgres', None, False, False, False, False),\n",
+       " ('public', 'table_3', 'postgres', None, False, False, False, False),\n",
+       " ('public', 'table_4', 'postgres', None, False, False, False, False),\n",
+       " ('public', 'table_5', 'postgres', None, False, False, False, False)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = \"\"\"SELECT * FROM pg_catalog.pg_tables\n",
     "            WHERE schemaname != 'pg_catalog'\n",
@@ -138,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2.2, 'three', True)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"SELECT * FROM table_1;\"\"\")\n",
     "cur.fetchall()"
@@ -173,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,9 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2.2, 'three', True),\n",
+       " (5, 5.5, 'five', True),\n",
+       " (5, 5.5, 'five', True),\n",
+       " (5, 5.5, 'five', True)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cur.execute(\"\"\"SELECT * FROM table_1;\"\"\")\n",
     "cur.fetchall()"
@@ -208,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,12 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
