--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from joblib import load\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import timeit\n",
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_runtime(function):\n",
+    "    runtime = timeit.timeit(function,globals=globals(),number=1)\n",
+    "    return runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +106,44 @@
     "        print(f' Paste Results into your browser or Spotify desktop app: \\n')\n",
     "        return similar_songs\n",
     "    except:\n",
-    "        print(\"Song not available try tnother\")"
+    "        print(\"Song not available try another\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source URL for \"In Spite of Ourselves\" by \"John Prine\":\n",
+      "\n",
+      "https://open.spotify.com/track/1k691v8ChLgDiuLLKnjyj6 \n",
+      "\n",
+      " Paste Results into your browser or Spotify desktop app: \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.061245822005731"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_runtime('predict(\"John Prine\",\"In Spite\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -137,13 +183,174 @@
        " 'https://open.spotify.com/track/0tP6mrtcLOYPDmE0QNA1Q7']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predict(\"John Prine\",\"In Spite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3308735379978316"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_runtime(\"load(rootpath + 'Flask_API/SOUNDDRIP/data/song_id_list2.pkl')\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "728156"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(song_id_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_id_array = np.asarray(song_id_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06417388599948026"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_runtime('load(\"./song_id_array.pkl\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_id_array = load(\"./song_id_array.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "728156"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(song_id_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(artist,track):\n",
+    "    similar_songs = []\n",
+    "    baseurl = 'https://open.spotify.com/track/'\n",
+    "    try: \n",
+    "        results = songdf[(songdf[\"artist\"].str.contains(artist,case=False,regex=True)) & (songdf[\"track\"].str.contains(track,case=False,regex=True))]\n",
+    "        sourcetrackartist = results['artist'].iloc[0]\n",
+    "        sourcetracktrack = results['track'].iloc[0]\n",
+    "        sourcetrackid = results['songid'].iloc[0]\n",
+    "        results = results.drop([\"artist\",\"track\",\"duration_ms\",\"songid\"],axis=1)\n",
+    "        scalar = load(rootpath + 'Flask_API/SOUNDDRIP/models/scalar2.joblib')\n",
+    "        dataframe_scaled = scalar.transform(results)\n",
+    "        model = load(rootpath + 'Flask_API/SOUNDDRIP/models/model2.joblib')\n",
+    "        results = model.kneighbors([dataframe_scaled][0])[1]\n",
+    "        song_id_array = load(\"./song_id_array.pkl\")\n",
+    "        for song_row in results[0][1:]:\n",
+    "            song_id = song_id_array[song_row]\n",
+    "            similar_songs.append(baseurl + song_id)\n",
+    "        print(f'Source URL for \"{sourcetracktrack}\" by \"{sourcetrackartist}\":\\n')\n",
+    "        print(f'{baseurl + sourcetrackid} \\n')\n",
+    "        print(f' Paste Results into your browser or Spotify desktop app: \\n')\n",
+    "        return similar_songs\n",
+    "    except:\n",
+    "        print(\"Song not available try another\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source URL for \"In Spite of Ourselves\" by \"John Prine\":\n",
+      "\n",
+      "https://open.spotify.com/track/1k691v8ChLgDiuLLKnjyj6 \n",
+      "\n",
+      " Paste Results into your browser or Spotify desktop app: \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.896755433997896"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_runtime('predict(\"John Prine\",\"In Spite\")')"
    ]
   },
   {
