--- a/data_collection/Utilizing_Client_Credentials2.ipynb
+++ b/data_collection/Utilizing_Client_Credentials2.ipynb
@@ -96,8 +96,9 @@
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
-    "client_credentials_manager = SpotifyClientCredentials(client_id=CLIENT_ID,client_secret=CLIENT_SECRET)\n",
-    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
+    "def authorize2():\n",
+    "    client_credentials_manager = SpotifyClientCredentials(client_id=CLIENT_ID,client_secret=CLIENT_SECRET)\n",
+    "    sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
   {
