--- a/data_collection/Adding Genre.ipynb
+++ b/data_collection/Adding Genre.ipynb
@@ -16,12 +16,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Connection to DB for executions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///song_list_v2.db', echo=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions for use in this notebook"
    ]
   },
   {
@@ -138,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inserts Genre Value into Genres Column"
+    "# [COMPLETED] Inserts Genre Value into Genres Column"
    ]
   },
   {
@@ -147,17 +161,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genres_list = []\n",
-    "for item in engine.execute(\"SELECT songid FROM features\").fetchall()[515122:]:    \n",
-    "    songid = item.values()[0]\n",
-    "    artistid = get_artist_id(songid)\n",
-    "    genres = get_genres(artistid)\n",
-    "    try:\n",
-    "        engine.execute(f'UPDATE features SET genres = \\\"{genres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
-    "        authorize()\n",
-    "    except:\n",
-    "        print(\"couldn't insert\")\n",
-    "        continue"
+    "# genres_list = []\n",
+    "# for item in engine.execute(\"SELECT songid FROM features\").fetchall()[515122:]:    \n",
+    "#     songid = item.values()[0]\n",
+    "#     artistid = get_artist_id(songid)\n",
+    "#     genres = get_genres(artistid)\n",
+    "#     try:\n",
+    "#         engine.execute(f'UPDATE features SET genres = \\\"{genres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
+    "#         authorize()\n",
+    "#     except:\n",
+    "#         print(\"couldn't insert\")\n",
+    "#         continue"
    ]
   },
   {
@@ -176,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert to PD DF"
+    "# Convert to PD DF - For Exploration - SEE NULL VALUE RESULT"
    ]
   },
   {
@@ -499,7 +513,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retry Genre Lookups for Null Rows"
+    "# [THIS IS WHERE I LEFT OFF - INCOMPLETE] \n",
+    "# Retry Genre Lookup / SQL Update on Collected Db for Null Rows"
    ]
   },
   {
