updated once 1468 values added into db file

--- a/data_collection/Adding Genre.ipynb
+++ b/data_collection/Adding Genre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,17 +161,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# genres_list = []\n",
-    "# for item in engine.execute(\"SELECT songid FROM features\").fetchall()[515122:]:    \n",
-    "#     songid = item.values()[0]\n",
-    "#     artistid = get_artist_id(songid)\n",
-    "#     genres = get_genres(artistid)\n",
-    "#     try:\n",
-    "#         engine.execute(f'UPDATE features SET genres = \\\"{genres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
-    "#         authorize()\n",
-    "#     except:\n",
-    "#         print(\"couldn't insert\")\n",
-    "#         continue"
+    "for item in engine.execute(\"SELECT songid FROM features\").fetchall()[515122:]:    \n",
+    "    songid = item.values()[0]\n",
+    "    artistid = get_artist_id(songid)\n",
+    "    genres = get_genres(artistid)\n",
+    "    try:\n",
+    "        engine.execute(f'UPDATE features SET genres = \\\"{genres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
+    "        authorize()\n",
+    "    except:\n",
+    "        print(\"couldn't insert\")\n",
+    "        continue"
    ]
   },
   {
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,34 +204,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "index                  0\n",
-       "acousticness           0\n",
-       "artist                 0\n",
-       "danceability           0\n",
-       "duration_ms            0\n",
-       "energy                 0\n",
-       "instrumentalness       0\n",
-       "key                    0\n",
-       "liveness               0\n",
-       "loudness               0\n",
-       "mode                   0\n",
-       "songid                 0\n",
-       "speechiness            0\n",
-       "tempo                  0\n",
-       "time_signature         0\n",
-       "track                  1\n",
-       "valence                0\n",
-       "genres              1468\n",
+       "index               0\n",
+       "acousticness        0\n",
+       "artist              0\n",
+       "danceability        0\n",
+       "duration_ms         0\n",
+       "energy              0\n",
+       "instrumentalness    0\n",
+       "key                 0\n",
+       "liveness            0\n",
+       "loudness            0\n",
+       "mode                0\n",
+       "songid              0\n",
+       "speechiness         0\n",
+       "tempo               0\n",
+       "time_signature      0\n",
+       "track               1\n",
+       "valence             0\n",
+       "genres              0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,12 +244,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create List of all Null Values for Investigation"
+    "# [Complete] - Create List of all Null Values for Investigation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1468"
+       "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,45 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "index                                  125\n",
-       "acousticness                         0.785\n",
-       "artist                   Dora The Explorer\n",
-       "danceability                         0.766\n",
-       "duration_ms                          48787\n",
-       "energy                               0.226\n",
-       "instrumentalness                         0\n",
-       "key                                      9\n",
-       "liveness                             0.165\n",
-       "loudness                            -5.875\n",
-       "mode                                     1\n",
-       "songid              4LisLrspORq8IagdLHWkf7\n",
-       "speechiness                          0.055\n",
-       "tempo                                93.05\n",
-       "time_signature                           4\n",
-       "track                The Itsy Bitsy Spider\n",
-       "valence                              0.877\n",
-       "genres                                None\n",
-       "Name: 125, dtype: object"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[nan_rows[0]]"
+    "# df.loc[nan_rows[0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +446,7 @@
        "5    ['bolero', 'mariachi', 'ranchera']  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +456,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove track NULL value and reset index and pickle new DF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Print Values for Test - Complete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -513,54 +539,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [THIS IS WHERE I LEFT OFF - INCOMPLETE] \n",
+    "# [Completed] \n",
     "# Retry Genre Lookup / SQL Update on Collected Db for Null Rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['cartoon', \"children's music\"]\n",
-      "['cartoon', \"children's music\"]\n",
-      "couldn't insert 4LisLrspORq8IagdLHWkf7 into table\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for row_index in nan_rows[0:1]:\n",
-    "    songid = df.loc[row_index][\"songid\"]\n",
-    "    artistid = get_artist_id(songid)\n",
-    "    genres = get_genres(artistid)\n",
-    "    print(genres)\n",
-    "    newgenres = [i.replace('\\\"', \"'\") for i in genres]\n",
-    "    print(newgenres)\n",
-    "#     for genre in genres:\n",
-    "#         for letter in genre:\n",
-    "#             print(letter)\n",
-    "#     print([i.replace('\\\"',\"'\") for i in genres])\n",
-    "#     newgenres = [w.replace('\"',\"'\") for w in genres]\n",
-    "#     print(newgenres)\n",
-    "    try:\n",
-    "        engine.execute(f'UPDATE features SET genres = \\\"{newgenres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
-    "        authorize()\n",
-    "    except:\n",
-    "        print(f\"couldn't insert {songid} into table\")\n",
-    "        continue\n",
-    "        "
+    "nan_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# for row_index in nan_rows:\n",
+    "#     songid = df.loc[row_index][\"songid\"]\n",
+    "#     artistid = get_artist_id(songid)\n",
+    "#     genres = get_genres(artistid)\n",
+    "#     newgenres = '['\n",
+    "#     for item in g:\n",
+    "#         newgenres += \"'\" + item + \"',\"\n",
+    "#     newgenres = words[:-1]\n",
+    "#     newgenres += \"]\" \n",
+    "#     try:\n",
+    "#         engine.execute(f'UPDATE features SET genres = \\\"{newgenres}\\\" WHERE songid = \\\"{songid}\\\"')\n",
+    "#         authorize()\n",
+    "#     except:\n",
+    "#         print(f\"couldn't insert {songid} into table\")\n",
+    "#         continue\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
