--- a/data_collection/Adding Genre.ipynb
+++ b/data_collection/Adding Genre.ipynb
@@ -464,45 +464,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.reset_index()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.drop(columns=\"index\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.loc[[117524], ['track']] = \"Mashin For Mine / Summer In The City\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]                                                                                                                                                                                                        154138\n",
+       "['baroque', 'classical', 'early music', 'german baroque']                                                                                                                                                   3654\n",
+       "['classical', 'classical era']                                                                                                                                                                              1907\n",
+       "['cartoon','children's music']                                                                                                                                                                              1468\n",
+       "['smooth jazz']                                                                                                                                                                                             1274\n",
+       "                                                                                                                                                                                                           ...  \n",
+       "['ukrainian metal']                                                                                                                                                                                            1\n",
+       "['cali rap', 'pop rap', 'slow game']                                                                                                                                                                           1\n",
+       "['andean', 'chilean rock', 'latin funk', 'latin rock', 'nueva cancion', 'rap chileno', 'rap conciencia']                                                                                                       1\n",
+       "['jazz brass', 'swedish jazz']                                                                                                                                                                                 1\n",
+       "['alternative dance', 'chamber psych', 'dance-punk', 'experimental pop', 'experimental rock', 'freak folk', 'instrumental math rock', 'math rock', 'new rave', 'noise pop', 'noise rock', 'post-rock']         1\n",
+       "Name: genres, Length: 20721, dtype: int64"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.genres.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
