--- a/data_collection/Adding Genre.ipynb
+++ b/data_collection/Adding Genre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from env_vars import *\n",
     "import pandas as pd\n",
     "import sqlite3\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "import pickle"
    ]
   },
   {
@@ -194,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +512,274 @@
        "Name: genres, Length: 20721, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.genres.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexNames = df[df['genres'] == \"[]\" ].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(indexNames , inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>key</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>valence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>5.740180e+05</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "      <td>574018.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>357946.562946</td>\n",
+       "      <td>0.317023</td>\n",
+       "      <td>0.538694</td>\n",
+       "      <td>2.408866e+05</td>\n",
+       "      <td>0.612956</td>\n",
+       "      <td>0.208388</td>\n",
+       "      <td>5.284643</td>\n",
+       "      <td>0.214476</td>\n",
+       "      <td>-9.581242</td>\n",
+       "      <td>0.662383</td>\n",
+       "      <td>0.089784</td>\n",
+       "      <td>120.748153</td>\n",
+       "      <td>3.879729</td>\n",
+       "      <td>0.493747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>208887.321521</td>\n",
+       "      <td>0.341293</td>\n",
+       "      <td>0.183636</td>\n",
+       "      <td>1.195066e+05</td>\n",
+       "      <td>0.261756</td>\n",
+       "      <td>0.337502</td>\n",
+       "      <td>3.562836</td>\n",
+       "      <td>0.191707</td>\n",
+       "      <td>5.209874</td>\n",
+       "      <td>0.472897</td>\n",
+       "      <td>0.113566</td>\n",
+       "      <td>30.142483</td>\n",
+       "      <td>0.478231</td>\n",
+       "      <td>0.267250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.161000e+03</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-60.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>177522.250000</td>\n",
+       "      <td>0.011900</td>\n",
+       "      <td>0.411000</td>\n",
+       "      <td>1.789322e+05</td>\n",
+       "      <td>0.422000</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.096400</td>\n",
+       "      <td>-11.955000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.035400</td>\n",
+       "      <td>97.679000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.272000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>355701.500000</td>\n",
+       "      <td>0.161000</td>\n",
+       "      <td>0.550000</td>\n",
+       "      <td>2.235070e+05</td>\n",
+       "      <td>0.649000</td>\n",
+       "      <td>0.000905</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.133000</td>\n",
+       "      <td>-8.399000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.048300</td>\n",
+       "      <td>120.005000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.493000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>535066.750000</td>\n",
+       "      <td>0.613000</td>\n",
+       "      <td>0.677000</td>\n",
+       "      <td>2.782760e+05</td>\n",
+       "      <td>0.838000</td>\n",
+       "      <td>0.341000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.278000</td>\n",
+       "      <td>-5.932000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.086800</td>\n",
+       "      <td>139.680000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.714000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>728154.000000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>0.997000</td>\n",
+       "      <td>4.830606e+06</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.336000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.967000</td>\n",
+       "      <td>249.859000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             level_0   acousticness   danceability   duration_ms  \\\n",
+       "count  574018.000000  574018.000000  574018.000000  5.740180e+05   \n",
+       "mean   357946.562946       0.317023       0.538694  2.408866e+05   \n",
+       "std    208887.321521       0.341293       0.183636  1.195066e+05   \n",
+       "min         0.000000       0.000000       0.000000  1.161000e+03   \n",
+       "25%    177522.250000       0.011900       0.411000  1.789322e+05   \n",
+       "50%    355701.500000       0.161000       0.550000  2.235070e+05   \n",
+       "75%    535066.750000       0.613000       0.677000  2.782760e+05   \n",
+       "max    728154.000000       0.996000       0.997000  4.830606e+06   \n",
+       "\n",
+       "              energy  instrumentalness            key       liveness  \\\n",
+       "count  574018.000000     574018.000000  574018.000000  574018.000000   \n",
+       "mean        0.612956          0.208388       5.284643       0.214476   \n",
+       "std         0.261756          0.337502       3.562836       0.191707   \n",
+       "min         0.000000          0.000000       0.000000       0.000000   \n",
+       "25%         0.422000          0.000001       2.000000       0.096400   \n",
+       "50%         0.649000          0.000905       5.000000       0.133000   \n",
+       "75%         0.838000          0.341000       9.000000       0.278000   \n",
+       "max         1.000000          1.000000      11.000000       1.000000   \n",
+       "\n",
+       "            loudness           mode    speechiness          tempo  \\\n",
+       "count  574018.000000  574018.000000  574018.000000  574018.000000   \n",
+       "mean       -9.581242       0.662383       0.089784     120.748153   \n",
+       "std         5.209874       0.472897       0.113566      30.142483   \n",
+       "min       -60.000000       0.000000       0.000000       0.000000   \n",
+       "25%       -11.955000       0.000000       0.035400      97.679000   \n",
+       "50%        -8.399000       1.000000       0.048300     120.005000   \n",
+       "75%        -5.932000       1.000000       0.086800     139.680000   \n",
+       "max         6.336000       1.000000       0.967000     249.859000   \n",
+       "\n",
+       "       time_signature        valence  \n",
+       "count   574018.000000  574018.000000  \n",
+       "mean         3.879729       0.493747  \n",
+       "std          0.478231       0.267250  \n",
+       "min          0.000000       0.000000  \n",
+       "25%          4.000000       0.272000  \n",
+       "50%          4.000000       0.493000  \n",
+       "75%          4.000000       0.714000  \n",
+       "max          5.000000       1.000000  "
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(df, open( \"./final_data/DF_v3.pkl\", \"wb\" ) )"
    ]
   },
   {
