--- a/unique-song-reqs/User_Table_DB_Updates.ipynb
+++ b/unique-song-reqs/User_Table_DB_Updates.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2 as ps\n",
-    "from env_vars import *"
+    "from env_vars import *\n"
    ]
   },
   {
@@ -23,6 +23,44 @@
     "                  password=POSTGRES_PASSWORD,\n",
     "                  port=POSTGRES_PORT)\n",
     "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"SELECT * FROM pg_catalog.pg_tables\n",
+    "            WHERE schemaname != 'pg_catalog'\n",
+    "            AND schemaname != 'information_schema';\"\"\"\n",
+    "cur.execute(query)\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"\"\"CREATE TABLE users\n",
+    "                (ID integer, \n",
+    "                display_name varchar(50)\n",
+    "                );\"\"\")\n",
+    "# Commit table creation\n",
+    "conn.commit()"
    ]
   },
   {
