updated tables code

--- a/unique-song-reqs/User_Table_DB_Updates.ipynb
+++ b/unique-song-reqs/User_Table_DB_Updates.ipynb
@@ -2,32 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2 as ps\n",
-    "from env_vars import *\n"
+    "from env_vars import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create connection and cursor    \n",
-    "conn = ps.connect(host=POSTGRES_ADDRESS,\n",
-    "                  database=POSTGRES_DBNAME,\n",
-    "                  user=POSTGRES_USERNAME,\n",
-    "                  password=POSTGRES_PASSWORD,\n",
-    "                  port=POSTGRES_PORT)\n",
-    "cur = conn.cursor()"
+    "def reconnect():\n",
+    "    # create connection and cursor    \n",
+    "    conn = ps.connect(host=POSTGRES_ADDRESS,\n",
+    "                      database=POSTGRES_DBNAME,\n",
+    "                      user=POSTGRES_USERNAME,\n",
+    "                      password=POSTGRES_PASSWORD,\n",
+    "                      port=POSTGRES_PORT)\n",
+    "    cur = conn.cursor()\n",
+    "    return cur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def run_query():\n",
+    "#     try:\n",
+    "#         cur.execute(query)\n",
+    "#     except Exception as e:\n",
+    "#         print (e.message)\n",
+    "#         return reconnect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_query()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# query = \"\"\"SELECT * FROM users\n",
+    "#             WHERE schemaname != 'pg_catalog'\n",
+    "#             AND schemaname != 'information_schema';\"\"\"\n",
+    "# cur.execute(query)\n",
+    "# cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -36,28 +74,44 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = \"\"\"SELECT * FROM pg_catalog.pg_tables\n",
-    "            WHERE schemaname != 'pg_catalog'\n",
-    "            AND schemaname != 'information_schema';\"\"\"\n",
+    "cur = reconnect()\n",
+    "query = \"\"\"SELECT * FROM users;\"\"\"\n",
+    "\n",
     "cur.execute(query)\n",
     "cur.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"\"\"CREATE TABLE users\n",
-    "                (ID integer, \n",
-    "                display_name varchar(50)\n",
+    "# cur.execute(\"\"\"CREATE TABLE users\n",
+    "#                 (ID integer, \n",
+    "#                 display_name varchar(50)\n",
+    "#                 );\"\"\")\n",
+    "# # Commit table creation\n",
+    "# conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = reconnect()\n",
+    "cur.execute(\"\"\"CREATE TABLE recommendations\n",
+    "                (userID integer, \n",
+    "                songID integer,\n",
+    "                recDate DATE \n",
     "                );\"\"\")\n",
     "# Commit table creation\n",
     "conn.commit()"
