update the notebook

--- a/data_collection/popularity_availability.ipynb
+++ b/data_collection/popularity_availability.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -434,11 +434,9 @@
       "5PS5dpaLogPzYU9hWiWyZb\n",
       "0\n",
       "1\n",
-      "couldn't insert 1 or 0 into table\n",
       "41RpZW2lxAdnqDd2nMBzLQ\n",
       "15\n",
-      "1\n",
-      "couldn't insert 1 or 15 into table\n"
+      "1\n"
      ]
     }
    ],
@@ -451,7 +449,7 @@
     "    markets = get_markets(songid)\n",
     "    print(markets)\n",
     "    try:\n",
-    "        engine.execute(f'UPDATE table SET popularity = \\\"{popularity}\\\", availability = \\\"{markets}\\\" WHERE songid = \\\"{songid}\\\"')\n",
+    "        engine.execute(f'UPDATE songs SET popularity = \\\"{popularity}\\\", availability = \\\"{markets}\\\" WHERE songid = \\\"{songid}\\\"')\n",
     "        authorize()\n",
     "    except:\n",
     "        print(f\"couldn't insert {markets} or {popularity} into table\")\n",
